# automated-monthly-report-v2

./: .gitignore  main.py  pyproject.toml
config/: input_data.py
core/: bigquery_utils.py  ga_utils.py  screenshots_utils.py  slide_utils.py
