[project]
name = "automated-monthly-report-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-analytics-data>=0.22.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-bigquery>=3.41.0",
    "playwright>=1.60.0",
]
